# gamma

./: .gitignore  README.md  README_investing_criteria.md  planning.md
Jin/: backtesting_one.py  backtesting_two.py  final_four.py  final_one.py  final_three.py  final_two.py
Jin/Version_0.1/: README.md  investing_01.py  investing_02.py  investing_03.py  investing_04.py
Jin/Version_0.2/: investing_04.py
Jin/Version_0.2/download_list_of_stocks/: README.md  final_stock_ticker_list.csv  parse_dict.py  parse_path.py  parse_up_to_date.py  stock_ticker_list_after_parse_dict.csv  stock_ticker_list_after_parse_path.csv
Jin/Version_0.2/main/: final_algorithm.py  investing_01.py  investing_02.py  investing_03.py  investing_04.py  investing_05.py  stock_ticker_list_after_parse_up_to_date.csv
Jin/Version_01/: algo.py  debug_matrix.py  fetch_data.py  test.py
Jin/Version_01/backtest_strategy/: check_shareprices.py  get_company_names_that_pass_criteria.py  investment_criteria.py
Jin/Version_01/calculate_metrics/: available_data_at_date.py  formula_of_ratios.py  get_metrics.py  get_shareprices.py  library_functions.py
Jin/Version_01/convert_data_format/: download_dict_company_index_matrix.py  download_dict_df_statement_index.py  download_matrix.py  library_functions.py
Jin/Version_01/fetch_simfin_data/: fetch_simfin_data.py
Jin/Version_02/: algo_final.py  algo_final_draft.py  test_algo.py
Jin/Version_02/calculate_accuracy_rate_06/: check_investment_criteria.py  investment_criteria.py
Jin/Version_02/calculate_ratios_05/: formula_of_ratios.py
Jin/Version_02/convert_data_format_02/: convert_data_shareprices.py  convert_data_statement.py  (+1 more)
alpha/: Pipfile  alpha.py
alpha/alpha/: base.py  data_fetching.py  fmp.py  main.py  metrics.py
data_fetchers/: fmp.py
downloaders/: fmp.py
gamma/: Cargo.toml
gamma/gamma-derive/: Cargo.toml
gamma/gamma-derive/src/: lib.rs
gamma/src/: fetching.rs  financials.rs  main.rs  metrics.rs  mock.rs  simfin.rs  traits.rs  util.rs  utils.rs
src/: fetching.rs  financials.rs  metrics.rs  mock.rs  nnet.rs  util.rs
test_data/: aapl-balancesheet.xlsx  aapl-cashflow.xlsx  aapl-growth.xlsx  aapl-income.xlsx  aapl-metrics.xlsx  aapl-stock-5y.csv
(+19 files in other folders)
