[package]
name = "gamma"
version = "0.1.0"
authors = ["Constantine Theocharis <kontheocharis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
bincode = "1.2"
ndarray = { version = "0.13", features = ["rayon" ,"blas", "serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fern = "0.6"
num_enum = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
itertools = "0.9"
enum-iterator = "0.6"
rayon = "1.3"

[profile.release]
debug = true
