[package]
name = "gamma"
version = "0.1.0"
authors = ["Constantine Theocharis <kontheocharis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.2"
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "0.6"
fern = "0.6"
futures = "0.3"
itertools = "0.9"
log = "0.4"
ndarray = { version = "0.13", features = ["rayon" ,"blas", "serde"] }
num_enum = "0.4"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }

[profile.release]
debug = true
